po: update po/sr_RS@latin/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 11:04+0000\n"
+"PO-Revision-Date: 2017-02-17 13:41+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -382,7 +382,7 @@ msgstr "Idi na kratak pregled kontakta"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Delete (to trash)"
-msgstr ""
+msgstr "Brisanje (u kantu)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact A Full Name"
@@ -466,19 +466,19 @@ msgstr "Članstvo #"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Code - Debit"
-msgstr ""
+msgstr "Kod finansijskog računa - Debit"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Code - Credit"
-msgstr ""
+msgstr "Kod finansijskog računa - Kredit"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Name - Debit"
-msgstr ""
+msgstr "Ime finansijskog računa - Debit"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Name - Credit"
-msgstr ""
+msgstr "Ime finansijskog računa - Kredit"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Contribution #"
@@ -668,7 +668,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Personal Campaign Title"
-msgstr ""
+msgstr "Naslov lične kampanje"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Committed Amount"
@@ -725,7 +725,7 @@ msgstr "Jedinica učestalosti"
 #: CRM/Report/Form/Contribute/Recur.php
 msgid ""
 "Calculated end date (either end date or date all installments will be made)"
-msgstr ""
+msgstr "Izračunati datum kraja (datum kraja ili datum kada će sve rate biti isplaćene)"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Addressee Name"
@@ -968,7 +968,7 @@ msgstr "Tri"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 msgid "View Participant Record for this Contact."
-msgstr ""
+msgstr "Vidi zapis učesnika za ovaj kontakt."
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php
@@ -989,7 +989,7 @@ msgstr "Valuta donacije"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "View Participant Record"
-msgstr ""
+msgstr "Vidi zapis učesnika"
 
 #: CRM/Report/Form/Event/Summary.php
 msgid "View Event Income For this Event"
@@ -997,7 +997,7 @@ msgstr "Pregledajte prihod od ovog događaja"
 
 #: CRM/Report/Form/Extended.php
 msgid "Total Quantity Selected"
-msgstr ""
+msgstr "Ukupna odabrana količina"
 
 #: CRM/Report/Form/Extended.php
 msgid "Total of Line Items"
@@ -1030,7 +1030,7 @@ msgstr ""
 
 #: CRM/Report/Form/Extended.php
 msgid "Individual Contribution"
-msgstr ""
+msgstr "Pojedinačna donacija"
 
 #: CRM/Report/Form/Extended.php
 msgid "Case Deleted?"
@@ -1087,7 +1087,7 @@ msgstr "Po tipu kontakta"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By World Region"
-msgstr ""
+msgstr "Po regionu"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Country"
@@ -1211,7 +1211,7 @@ msgstr "Odjava"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opted-out"
-msgstr ""
+msgstr "Isključen/a"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Replied"
@@ -1227,7 +1227,7 @@ msgstr "Prosleđeno"
 
 #: CRM/Report/Form/Mailing/Opened.php
 msgid "Opened Count"
-msgstr ""
+msgstr "Broj otvaranja"
 
 #: CRM/Report/Form/Mailing/Opened.php
 msgid "Mail Opened: %1"
@@ -1279,15 +1279,15 @@ msgstr ""
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "First Contribution Date"
-msgstr ""
+msgstr "Datum prve donacije"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "First Contribution Amount"
-msgstr ""
+msgstr "Iznos prve donacije"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Recurring Contribution Id"
-msgstr ""
+msgstr "ID Periodične donacije"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Option"
@@ -1317,7 +1317,7 @@ msgstr "Iznos uplate (poslednji)"
 
 #: CRM/Report/Form/Member/Detail.php
 msgid "Membership Detail Report"
-msgstr ""
+msgstr "Detaljni izveštaj o članstvu"
 
 #: CRM/Report/Form/Member/Lapse.php
 msgid "Membership Lapse Date"
@@ -1333,7 +1333,7 @@ msgstr "Ukupno uplata"
 
 #: CRM/Report/Form/Member/Summary.php
 msgid "Member Count"
-msgstr ""
+msgstr "Broj članova"
 
 #: CRM/Report/Form/Member/Summary.php
 msgid "Total Members"
@@ -1377,7 +1377,7 @@ msgstr ""
 
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Next Payment Due"
-msgstr ""
+msgstr "Rok za sledeću uplatu"
 
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "View Pledge Details for this contact"
@@ -1481,7 +1481,7 @@ msgstr "Opcije prikaza"
 
 #: CRM/Report/Form.php
 msgid "Chart"
-msgstr ""
+msgstr "Grafikon"
 
 #: CRM/Report/Form.php
 msgid "Group by columns"
@@ -1775,7 +1775,7 @@ msgstr "Q%1 = %2 "
 
 #: templates/CRM/Report/Form/Event/Income.tpl
 msgid "%1 Breakdown"
-msgstr ""
+msgstr "%1 pregled"
 
 #: templates/CRM/Report/Form/Event/Income.tpl
 msgid "% of Total"
@@ -1803,7 +1803,7 @@ msgstr "Svi grantovi"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Statistics Breakdown"
-msgstr ""
+msgstr "Statistike - pregled"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Unassigned"
@@ -1870,7 +1870,7 @@ msgstr ""
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid ""
 "Users with appropriate permissions can add this report to their dashboard."
-msgstr ""
+msgstr "Korisnici sa odgovarajućim dozvolama mogu dodati ovaj izveštaj na svoju kontrolnu tablu."
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid ""
@@ -2004,7 +2004,7 @@ msgstr "Izveštaji"
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "Run this report"
-msgstr ""
+msgstr "Pokreni ovaj izveštaj"
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "Are you sure you want delete this report?"
@@ -2018,7 +2018,7 @@ msgstr "Nema kreiranih izveštaja za %1."
 msgid ""
 "You can create reports by selecting from the <a href=\"%1\">list of report "
 "templates here.</a>"
-msgstr ""
+msgstr "Možete kreirati izveštaje tako što ćete ih odabrati iz <a href=\"%1\">liste šablona izveštaja ovde.</a>"
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "Contact your site administrator for help creating reports."
@@ -2262,7 +2262,7 @@ msgstr "Ukupan prihod"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
-msgstr ""
+msgstr "Registracija po IDu učesnika"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant Fee"
@@ -2338,7 +2338,7 @@ msgstr "(Kopiju kreirao %1, %2)"
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Developer"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
