--- a/po/sr_RS@latin/pledge.po
+++ b/po/sr_RS@latin/pledge.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 11:57+0000\n"
+"PO-Revision-Date: 2017-02-17 11:35+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -45,11 +45,11 @@ msgstr "Status uplate obaveze"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2 (overdue)"
-msgstr ""
+msgstr "%1 - rok je %2 (prošao rok)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2"
-msgstr ""
+msgstr "%1 - rok je %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -62,7 +62,7 @@ msgstr "Izvrši uplatu(uplate) obaveze:"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "I want to make a one-time contribution"
-msgstr ""
+msgstr "Jednokratna donacija"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "I pledge to contribute this amount every"
