po: update po/sr_RS@latin/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-13 14:21+0000\n"
+"PO-Revision-Date: 2017-02-17 12:05+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -63,7 +63,7 @@ msgstr "Sledeće tabele imaju unos za ovaj finansijski tip: %1"
 msgid ""
 "You cannot remove an account with a %1 relationship while the Financial Type"
 " is used for a Premium."
-msgstr ""
+msgstr "Ne možete ukloniti nalog sa vezom %1 ukoliko se finansijski tip koristi za nagradu."
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -884,7 +884,7 @@ msgstr ""
 msgid ""
 "When you close your batch, CiviCRM will verify that you have entered the "
 "correct number"
-msgstr ""
+msgstr "Kada zatvorite vašu grupu, CiviCRM će proveriti da li ste uneli tačan broj"
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
@@ -901,7 +901,7 @@ msgstr ""
 msgid ""
 "When you close your batch, CiviCRM will verify the totals entered match this"
 " number"
-msgstr ""
+msgstr "Kada zatvorite vašu grupu, CiviCRM će proveriti da li se ukupan iznos slaže sa ovim brojem"
 
 #: templates/CRM/Financial/Page/FinancialType.tpl
 msgid ""
@@ -916,7 +916,7 @@ msgstr ""
 msgid ""
 "Each financial type relates to a number of <a href=\"%1\">financial "
 "accounts</a> to track income, accounts receivable, and fees.</p>"
-msgstr ""
+msgstr "Svaki finansijski tip se povezuje sa brojem <a href=\"%1\">finansijskih računa</a> za praćenje prihoda, potraživanja i naknade.</p>"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Assign Account"
@@ -1083,7 +1083,7 @@ msgstr ""
 #: templates/CRM/Financial/Form/PaypalExpress.tpl
 #: templates/CRM/Financial/Form/PaypalPro.tpl
 msgid "Checkout securely. Pay without sharing your financial information."
-msgstr ""
+msgstr "Sigurni čekaut. Platite bez deljenja vaših finansijskih podataka."
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
