po: update po/sr_RS@latin/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-10 11:28+0000\n"
+"PO-Revision-Date: 2017-02-18 11:17+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -419,7 +419,7 @@ msgstr "Podesi ukupan iznos obaveze?"
 
 #: CRM/Batch/Form/Entry.php CRM/Contribute/Form/SoftCredit.php
 msgid "Please enter the soft credit amount."
-msgstr ""
+msgstr "Unesite iznos zasluge"
 
 #: CRM/Batch/Page/Batch.php CRM/Financial/Page/Batch.php
 msgid "Search Batches"
@@ -606,7 +606,7 @@ msgstr "Samo donacije"
 
 #: CRM/Contribute/BAO/Query.php CRM/Report/Form/Contribute/Detail.php
 msgid "Soft Credits Only"
-msgstr ""
+msgstr "Samo zasluge"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type ID"
@@ -1044,11 +1044,11 @@ msgstr "test"
 
 #: CRM/Contribute/Selector/Search.php CRM/Report/Form/Contribute/Summary.php
 msgid "Soft Credit Amount"
-msgstr ""
+msgstr "Zasluga - iznos"
 
 #: CRM/Contribute/Selector/Search.php CRM/Report/Form/Contribute/Detail.php
 msgid "Soft Credit For"
-msgstr ""
+msgstr "Zasluga za"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 #: templates/CRM/Event/Form/ParticipantFeeSelection.tpl
@@ -1628,7 +1628,7 @@ msgstr "Možete <a href=\"%1\">Preuzeti duplikate</a>. Možete pregledati ove za
 #: CRM/Report/Form/Contribute/Detail.php
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Soft Credits"
-msgstr ""
+msgstr "Zasluge"
 
 #: templates/CRM/Contribute/Page/ContributionPage.tpl
 #: xml/templates/message_templates/pcp_notify_html.tpl
@@ -1655,7 +1655,7 @@ msgstr "Datum pokušaja nakon neuspeha"
 #: CRM/Report/Form/Contribute/Detail.php
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Total Soft Credits"
-msgstr ""
+msgstr "Ukupno zasluga"
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 #: templates/CRM/PCP/Page/PCP.tpl
@@ -1665,7 +1665,7 @@ msgstr "Vidi stranicu lične kampanje"
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Total Soft Credit Amount"
-msgstr ""
+msgstr "Ukupan iznos zasluga"
 
 #: templates/CRM/Contribute/Page/ContributionType.tpl
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
