po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-17 15:53+0000\n"
+"PO-Revision-Date: 2017-02-18 11:36+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2404,7 +2404,7 @@ msgstr "Ne šalji SMS"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Do Not Trade"
-msgstr ""
+msgstr "Ne posluj"
 
 #: CRM/Contact/DAO/Contact.php
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
@@ -2475,7 +2475,7 @@ msgstr "Individualni sufiks"
 
 #: CRM/Contact/DAO/Contact.php xml/templates/civicrm_data.tpl
 msgid "Formal Title"
-msgstr ""
+msgstr "Zvanična titula"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Email Greeting ID"
@@ -6175,7 +6175,7 @@ msgstr ""
 
 #: CRM/Core/BAO/UFField.php CRM/UF/Form/Field.php
 msgid "Phone and Extension"
-msgstr "Telefon i ekstenzija"
+msgstr "Telefon i lokal"
 
 #: CRM/Core/BAO/UFField.php
 msgid "Contribution Note"
@@ -6187,11 +6187,11 @@ msgstr "Pošalji priznanicu"
 
 #: CRM/Core/BAO/UFField.php xml/templates/civicrm_data.tpl
 msgid "Soft Credit"
-msgstr ""
+msgstr "Zasluga"
 
 #: CRM/Core/BAO/UFField.php xml/templates/civicrm_data.tpl
 msgid "Soft Credit Type"
-msgstr ""
+msgstr "Tip zasluge"
 
 #: CRM/Core/BAO/UFField.php xml/templates/civicrm_data.tpl
 msgid "Premiums"
@@ -6245,7 +6245,7 @@ msgstr ""
 
 #: CRM/Core/BAO/UFGroup.php
 msgid "Soft Credit To"
-msgstr ""
+msgstr "Zasluga ka"
 
 #: CRM/Core/BAO/UFGroup.php CRM/Price/DAO/PriceFieldValue.php
 #: CRM/Price/Form/Field.php
@@ -7577,7 +7577,7 @@ msgstr "Provajder mobilne telefonije"
 
 #: CRM/Core/DAO/Phone.php
 msgid "Phone Extension"
-msgstr "Ekstenzija - telefon"
+msgstr "Telefon - lokal"
 
 #: CRM/Core/DAO/Phone.php
 msgid "Phone Numeric"
@@ -9382,7 +9382,7 @@ msgstr "Ne šalji SMS"
 
 #: CRM/Core/SelectValues.php
 msgid "Do not trade"
-msgstr ""
+msgstr "Ne posluj"
 
 #: CRM/Core/SelectValues.php
 msgid "No bulk emails (User Opt Out)"
@@ -12664,7 +12664,7 @@ msgstr ""
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Soft Credit %1 - %2 doesn't exist. Row was skipped."
-msgstr ""
+msgstr "Zasluga %1 - %2 ne postoji. Red preskočen."
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Participant  id is not valid"
@@ -13760,7 +13760,7 @@ msgstr ""
 
 #: templates/CRM/Activity/Form/Activity.hlp
 msgid "Create Separate Activity Records?"
-msgstr ""
+msgstr "Kreiraj zasebne zapise o aktivnostima?"
 
 #: templates/CRM/Activity/Form/Activity.hlp
 msgid ""
@@ -14859,7 +14859,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid "System-generated Mail Settings"
-msgstr ""
+msgstr "Sistemski generisana podešavanja maila"
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid "Default Organization Address"
@@ -17507,7 +17507,7 @@ msgstr "Navigacija"
 msgid ""
 "Next/Previous buttons are not available for searches which are sorted by "
 "email, phone or address fields."
-msgstr ""
+msgstr "Dugmići za Sledeće/Prethodno nisu dostupni za pretrage koje su sortirane po poljima za email, telefon ili adresu."
 
 #: templates/CRM/Contact/Page/View/Summary.js
 msgid "Address Deleted"
@@ -17910,7 +17910,7 @@ msgstr ""
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "Obsolete widget"
-msgstr ""
+msgstr "Zastareli vidžet"
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "View / Edit Multiple Choice Options"
@@ -19137,7 +19137,7 @@ msgstr ""
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Tax Rate"
-msgstr ""
+msgstr "Stopa poreza"
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Total Tax Amount"
@@ -21691,13 +21691,13 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Soft Credit Report"
-msgstr ""
+msgstr "Izveštaj zasluga"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Shows contributions made by contacts that have been soft-credited to other "
 "contacts."
-msgstr ""
+msgstr "Prikaži donacije kontakata gde zasluga pripada druigim kontaktima."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Membership Report (Summary)"
@@ -23070,7 +23070,7 @@ msgstr "Mail izveštaji"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Generates and sends out reports via email"
-msgstr ""
+msgstr "Generiše i šalje izveštaje putem emaila"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
@@ -23174,7 +23174,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Soft Credit Types"
-msgstr ""
+msgstr "Tipovi zasluga"
 
 #: xml/templates/civicrm_data.tpl
 msgid "In Honor of"
@@ -26379,7 +26379,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "migrate"
-msgstr ""
+msgstr "migracija"
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -27108,7 +27108,7 @@ msgstr ""
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Migrate Settings to %1"
-msgstr ""
+msgstr "Migracija podešavanja ka %1"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Upgrade Add Help Pre and Post Fields to price value table"
