--- a/po/sr_RS@latin/batch.po
+++ b/po/sr_RS@latin/batch.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-09 07:24+0000\n"
+"PO-Revision-Date: 2017-02-18 11:14+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -139,7 +139,7 @@ msgstr "Validacija i obrada serije"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
-msgstr ""
+msgstr "Iznos zasluge ne treba da bude veći od ukupne sume"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
