po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-02-17 06:19+0000\n"
+"PO-Revision-Date: 2017-02-18 11:36+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -784,11 +784,11 @@ msgstr "Da li ovaj kontakt želi da prima poruke?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Do Not Trade"
-msgstr ""
+msgstr "Ne posluj"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Does this contact not want trade?"
-msgstr ""
+msgstr "Ovaj kontakt ne želi da posluje?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Opted Out of Bulk Mail"
@@ -1370,15 +1370,15 @@ msgstr "Izabrao/la naknadnu uplatu, i uplata se još uvek čeka."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM  Soft Credits"
-msgstr ""
+msgstr "CiviCRM zasluge"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Contribution Soft Credit ID"
-msgstr ""
+msgstr "ID zasluge donacije"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID of the Soft Credit"
-msgstr ""
+msgstr "Numerički ID zasluge"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Amount"
@@ -1386,7 +1386,7 @@ msgstr "Iznos"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The amount of the soft credit"
-msgstr ""
+msgstr "Iznos zasluge"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Personal Campaign Page Nickname"
