--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-17 12:05+0000\n"
+"PO-Revision-Date: 2017-02-18 11:29+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -154,7 +154,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Tax Rate"
-msgstr ""
+msgstr "Stopa poreza finansijskog računa"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Reserved Financial Account?"
@@ -692,7 +692,7 @@ msgstr ""
 msgid ""
 "The default rate used to calculate the taxes collected into this account "
 "(e.g. for tax rate of 8.27%, enter 8.27)."
-msgstr ""
+msgstr "Podrazumevana stopa koja se koristi da izračuna poreze prikupljene u ovom računu (npr. za poresku stopu od 8,27% unesite 8,27)."
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid ""
