--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-17 13:06+0000\n"
+"PO-Revision-Date: 2017-02-18 11:15+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -430,7 +430,7 @@ msgstr "Molimo izaberite finansijski tip"
 
 #: CRM/Member/Form/Membership.php
 msgid "Please Select a Soft Credit Type"
-msgstr ""
+msgstr "Izaberite tip zasluge"
 
 #: CRM/Member/Form/Membership.php
 msgid "Please select a contact"
