--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-13 15:10+0000\n"
+"PO-Revision-Date: 2017-02-18 11:31+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -223,7 +223,7 @@ msgstr "Recite prijatelju"
 
 msgctxt "menu"
 msgid "Configure Widget"
-msgstr ""
+msgstr "Konfiguracija vidžeta"
 
 msgctxt "menu"
 msgid "Premiums"
@@ -269,7 +269,7 @@ msgstr "Prihvaćene kreditne kartice"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Soft Credit Types"
-msgstr ""
+msgstr "Tipovi zasluga"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1906,14 +1906,14 @@ msgstr "Prikazuje listu najvećih donatora u vremenskom periodu koji odredite. M
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Soft Credits"
-msgstr ""
+msgstr "Zasluge"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Shows contributions made by contacts that have been soft-credited to other "
 "contacts."
-msgstr ""
+msgstr "Prikaži donacije kontakata gde zasluga pripada druigim kontaktima."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
