po: update po/sr_RS@latin/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/campaign.po
+++ b/po/sr_RS@latin/campaign.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-07 09:39+0000\n"
+"PO-Revision-Date: 2017-02-19 20:40+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -28,7 +28,7 @@ msgstr "Prošle kampanje"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
-msgstr ""
+msgstr "Ne postoje sid parametri ankete. Nemoguće je obraditi potpis."
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
@@ -524,7 +524,7 @@ msgstr "Rezerviši"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reserve and Interview"
-msgstr ""
+msgstr "Rezerviši i intervjuiši"
 
 #: CRM/Campaign/Form/Task/Reserve.php CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reservation"
@@ -574,7 +574,7 @@ msgstr "Rezerviši kontakte kampanje"
 
 #: CRM/Campaign/Info.php
 msgid "Reserve campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "Rezerviši kontakte iz kampanje za ankete i peticije"
 
 #: CRM/Campaign/Info.php
 msgid "release campaign contacts"
@@ -582,7 +582,7 @@ msgstr "raspusti kontakte kampanje"
 
 #: CRM/Campaign/Info.php
 msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "Raspusti rezervisane kontakte iz kampanje za ankete i peticije"
 
 #: CRM/Campaign/Info.php
 msgid "interview campaign contacts"
@@ -730,11 +730,11 @@ msgstr "Je rezervisan?"
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Save as voted."
-msgstr ""
+msgstr "Sačuvaj sa glasanjem."
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Save as non voted."
-msgstr ""
+msgstr "Sačuvaj bez glasanja."
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Vote Cancelled."
@@ -887,7 +887,7 @@ msgstr "Rezerviši svaki put"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Total Reserve"
-msgstr ""
+msgstr "Ukupno rezervisano"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Search Surveys"
