--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -9,7 +9,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Danny Liebig <danny.liebig@hotmail.de>, 2012
 # Dennis Staufer <staufes@gmail.com>, 2016
-# Detlev Sieber <detlev.sieber@foebud.org>, 2011,2013
+# Detlev Sieber <detlev.sieber@foebud.org>, 2011,2013,2017
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
 # Ettore Atalan <atalanttore@googlemail.com>, 2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
@@ -34,8 +34,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-14 10:10+0000\n"
-"Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
+"PO-Revision-Date: 2017-02-20 10:20+0000\n"
+"Last-Translator: Detlev Sieber <detlev.sieber@foebud.org>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3949,19 +3949,19 @@ msgstr "Wir bedanken uns für Ihre Anmeldung."
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong> %1</strong>."
-msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu %1 geändert."
+msgstr "Diese Mail ist eine Bestätigung für Ihre Registrierung. Ihr Status wurde zu %1 geändert"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>waitlisted</strong>."
-msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu <strong>Warteliste</strong> geändert."
+msgstr "Diese Mail ist eine Bestätigung für Ihre Registrierung. Ihr Status wurde zu <strong>Warteliste</strong> geändert"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>registered<strong>."
-msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu <strong>registriert</strong> geändert."
+msgstr "Diese Mail ist eine Bestätigung für Ihre Registrierung. Ihr Status wurde zu <strong>registriert</strong> geändert"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
@@ -3988,19 +3988,19 @@ msgstr "Klicken Sie hier, um Ihre Registrierung zu stornieren oder transferieren
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to %1."
-msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu %1 geändert."
+msgstr "Diese Mail ist eine Bestätigung für Ihre Registrierung. Ihr Status wurde zu %1 geändert"
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to waitlisted."
-msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu Warteliste geändert."
+msgstr "Diese Mail ist eine Bestätigung für Ihre Registrierung. Ihr Status wurde zu Warteliste geändert"
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to registered."
-msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu registriert geändert."
+msgstr "Diese Mail ist eine Bestätigung für Ihre Registrierung. Ihr Status wurde zu registriert geändert"
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
