po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-18 11:27+0000\n"
+"PO-Revision-Date: 2017-02-20 05:52+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -805,14 +805,14 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable Double Opt-in for Profiles which use the \"Add to Group\" setting"
-msgstr ""
+msgstr "Uključi duplu prijavu za polje za profile koji koriste \"Dodaj u grupu\" podešavanje"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid ""
 "When CiviMail is enabled and a profile uses the \"Add to Group\" setting, "
 "users who complete the profile form will receive a confirmation email. They "
 "must respond (opt-in) before they are added to the group."
-msgstr ""
+msgstr "Kada je CiviMail uključen i profil koristi podešavanje\"Dodaj u grupu\", korisnici koji popune formular iz profila će dobiti email sa potvrdom. Moraju odgovoriti (uključiti se) pre dodavanja u grupu."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Track replies using VERP in Reply-To header"
@@ -831,21 +831,21 @@ msgstr ""
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid ""
 "Drupal-only. Rules module must be enabled (beta feature - use with caution)."
-msgstr ""
+msgstr "Samo za Drupal. Modul sa pravilima mora biti uključen (beta funkcionalnost - koristite oprezno)."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable multiple bulk email address for a contact."
-msgstr ""
+msgstr "Uključi više email adresa za grupne mailove za kontakt."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid ""
 "CiviMail will deliver a copy of the email to each bulk email listed for the "
 "contact."
-msgstr ""
+msgstr "CiviMail će dostaviti kopiju emaila na svaki grupni email kontakta."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable global server wide lock for CiviMail"
-msgstr ""
+msgstr "Uključi globalno zaključavanje na serveru za CiviMail"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable CiviMail to generate Message-ID header"
@@ -3141,7 +3141,7 @@ msgstr ""
 msgid ""
 "When enabled, checks for contacts with similar names as the user types "
 "values into the contact form name fields."
-msgstr ""
+msgstr "Kada je uključeno, proverava da li postoje kontakti sa sličnim imenom dok korisnik unosi vrednosti u polja formulara kontakta."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
