po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-18 11:36+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-20 15:56+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17252,7 +17252,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/SavedSearch.tpl
 msgid "Enter a name and description for your Saved Search"
-msgstr ""
+msgstr "Unesite ime i opis vaše Sačuvane pretrage"
 
 #: templates/CRM/Contact/Page/View/ContactSmartGroup.tpl
 msgid "This contact does not currently belong to any smart groups."
@@ -17481,7 +17481,7 @@ msgstr "Veza"
 
 #: templates/CRM/Contact/Page/View/RelationshipSelector.tpl
 msgid "State/Prov"
-msgstr ""
+msgstr "Država/Pokrajina"
 
 #: templates/CRM/Contact/Page/View/RelationshipSelector.tpl
 msgid "There are no related contacts / organizations on record for you."
@@ -17555,11 +17555,11 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "You are not currently subscribed to any Groups."
-msgstr ""
+msgstr "Trenutno niste prijavljeni ni u jednu Grupu."
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Are you sure you want to unsubscribe from %1?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da se odjavite sa %1?"
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Unsubscribe"
@@ -17567,7 +17567,7 @@ msgstr "Odjava"
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Pending Subscriptions"
-msgstr ""
+msgstr "Prijave na čekanju"
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Your subscription to these group(s) is pending confirmation."
@@ -17618,11 +17618,11 @@ msgstr "Obično poslednje 3-4 cifre na zadnjoj strani kartice."
 
 #: templates/CRM/Core/BillingBlock.tpl
 msgid "My billing address is the same as above"
-msgstr ""
+msgstr "Moja adresa za naplatu je ista kao iznad"
 
 #: templates/CRM/Core/BillingBlock.tpl
 msgid "Billing Name and Address"
-msgstr ""
+msgstr "Ime i adresa za naplatu"
 
 #: templates/CRM/Core/Calendar/GData.tpl templates/CRM/Core/Calendar/Rss.tpl
 msgid "CiviEvent Public Calendar"
@@ -17872,7 +17872,7 @@ msgstr ""
 msgid ""
 "If you want to provide a default value for this field, enter it here. For "
 "date fields, format is YYYY-MM-DD."
-msgstr ""
+msgstr "Ukoliko želite da postavite podrazumevanu vrednost za ovo polje, unesite je ovde. Za polja sa datumima format je godina/mesec/dan."
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid ""
@@ -17914,7 +17914,7 @@ msgstr "Zastareli vidžet"
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "View / Edit Multiple Choice Options"
-msgstr ""
+msgstr "Pogledaj / Uredi Opcije za višestruki izbor"
 
 #: templates/CRM/Custom/Form/Group.tpl
 msgid ""
@@ -17968,7 +17968,7 @@ msgstr ""
 #: templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/Field.tpl
 msgid "Multiple Choice Options"
-msgstr ""
+msgstr "Opcije za višetruki izbor"
 
 #: templates/CRM/Custom/Form/Optionfields.tpl
 msgid ""
@@ -17992,7 +17992,7 @@ msgstr "drugi izbor"
 msgid ""
 "If you need additional options - you can add them after you Save your "
 "current entries."
-msgstr ""
+msgstr "Ukoliko su vam potrebne dodatne opcije - možete ih dodati nakon što Sačuvate trenutne unose."
 
 #: templates/CRM/Custom/Form/Preview.tpl templates/CRM/Price/Form/Preview.tpl
 msgid "Preview Mode"
@@ -18041,7 +18041,7 @@ msgstr ""
 msgid ""
 "Check this box if the first row of your file consists of field names "
 "(Example: \"Contact ID\", \"Participant Role\")."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko se u prvom redu vašeg fajla nalaze naslovi polja (npr. \"ID Kontakta\", \"Uloga učesnika\")."
 
 #: templates/CRM/Custom/Import/Form/DataSource.tpl
 msgid ""
@@ -18118,7 +18118,7 @@ msgid ""
 "from people registering for your events, select \"Participants\". If the "
 "information is specific to one type of participant (e.g. event volunteers), "
 "select \"Participants (role)\" and then select the role (e.g. 'Volunteer')."
-msgstr ""
+msgstr "Primer: Ukoliko koristite CiviEvent i želite da prikupite informacije od ljudi koji se registruju za vaše događaje, odaberite \"Učesnici\". Ako se informacije odnose isključivo na jedan tip učesnika (npr. na volontere), odaberite \"Učesnici (uloga)\" i onda odaberite ulogu (npr. 'Volonter')."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid ""
@@ -18136,7 +18136,7 @@ msgstr "Dozvoli više zapisa"
 msgid ""
 "Checking this box allows you to enter multiple sets of values for a given "
 "contact."
-msgstr ""
+msgstr "Štikliranje ove kućice omogućava vam da unesete višetruke setove vrednosti za dati kontakt."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid ""
@@ -18184,7 +18184,7 @@ msgstr "Maksimum zapisa"
 msgid ""
 "If you want to set a specific limit on the maximum number of records, enter "
 "that number. Otherwise leave this field blank."
-msgstr ""
+msgstr "Ukoliko želite da postavite određenu granicu za maksimalni broj zapisa, unesite taj broj. U suprotnom ostavite ovo polje prazno."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid ""
@@ -18201,7 +18201,7 @@ msgstr ""
 msgid ""
 "Check this box if you want only the title for this fieldset to be displayed "
 "when the page is initially loaded (fields are hidden)."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko želite da se prilikom otvaranja stranice prikazuje samo naslov ovog seta polja (polja su sakrivena)."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Collapsed on Search"
@@ -18211,7 +18211,7 @@ msgstr ""
 msgid ""
 "Check this box if you want only the title for this fieldset to be displayed "
 "when the page is initially loaded (fields are hidden) on advanced search."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko želite da se prilikom otvaranja stranice za naprednu pretragu prikazuje samo naslov ovog seta polja (polja su sakrivena)."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Pre Help"
@@ -18219,7 +18219,7 @@ msgstr ""
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Explanatory text displayed at the beginning of this sets of fields."
-msgstr ""
+msgstr "Tekst sa objašnjenjem koji se prikazuje na početku ovog seta polja."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Post Help"
@@ -18227,7 +18227,7 @@ msgstr ""
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Explanatory text displayed below this set of fields."
-msgstr ""
+msgstr "Tekst sa objašnjenjem koji se prikazuje ispod ovog seta polja."
 
 #: templates/CRM/Custom/Page/Group.tpl
 msgid ""
@@ -18353,7 +18353,7 @@ msgid ""
 "<strong>Export PRIMARY fields</strong> provides the most commonly used data "
 "values. This includes primary address information, preferred phone and "
 "email."
-msgstr ""
+msgstr "<strong>Eksport primarnih polja</strong>  nudi vrednosti podataka koje se najčešće koriste. Ovo uključuje informacije o primarnoj adresi, prioritetnom telefonu i emailu. "
 
 #: templates/CRM/Export/Form/Select.tpl
 msgid ""
@@ -18398,7 +18398,7 @@ msgid ""
 "You can upload a picture or image to include on your page. Your file should "
 "be in .jpg, .gif, or .png format. Recommended image size is 250 x 250 "
 "pixels. Images over 360 pixels wide will be automatically resized to fit."
-msgstr ""
+msgstr "Možete postaviti sliku na vašu stranicu. Fajl bi trebalo da bude u .jpg, .gif ili .png formatu. Preporučena veličina slike je 250 x 250 piksela. Slike širine preko 360 piksela će automatski biti smanjene do odgovarajuće veličine."
 
 #: templates/CRM/Form/attachment.tpl
 msgid "Browse to the <strong>file</strong> you want to upload."
@@ -18430,7 +18430,7 @@ msgid ""
 "link to a form where they can enter their friends' email addresses, along "
 "with a personalized message. CiviCRM will record these solicitation "
 "activities, and will add the friends to your database."
-msgstr ""
+msgstr "Opcija Recite prijatelju nudi vašim donatorima mogućnost da na lak način podele priču o ovoj kampanji za prikupljanje sredstava. Na stranici sa zahvalnicom za donaciju nalaziće se link koji vodi na formular gde vaši donatori mogu uneti email adrese svojih prijatelja uz personalizovanu poruku. CiviCM će zabeležiti ove aktivnosti posredovanja i dodaće njihove prijatelje u vašu bazu."
 
 #: templates/CRM/Friend/Form/Friend.tpl
 msgid ""
@@ -18439,7 +18439,7 @@ msgid ""
 "form where they can enter their friends' email addresses, along with a "
 "personalized message. CiviCRM will record these solicitation activities, and"
 " will add the friends to your database."
-msgstr ""
+msgstr "Opcija Recite prijatelju nudi učesnicima koji se registruju mogućnost da na lak način podele ovaj događaj. Na stranici sa zahvalnicom za registraciju nalaziće se link koji vodi na formular gde učesnici mogu uneti email adrese svojih prijatelja uz personalizovanu poruku. CiviCM će zabeležiti ove aktivnosti posredovanja i dodaće njihove prijatelje u vašu bazu."
 
 #: templates/CRM/Friend/Form/Friend.tpl
 msgid ""
@@ -18526,7 +18526,7 @@ msgstr "Možete urediti ime i opis ove grupe ovde. Kliknite na <a %1>Kontakti u 
 msgid ""
 "Enter a unique name and a description for your new group here. Then click "
 "'Continue' to find contacts to add to your new group."
-msgstr ""
+msgstr "Ovde unesite jedinstveno ime i opis za vašu novu grupu. Zatim kliknite 'Dalje' da biste pronašli kontakte koje ćete dodati u vašu novu grupu."
 
 #: templates/CRM/Group/Form/Edit.tpl
 msgid ""
@@ -18611,7 +18611,7 @@ msgid ""
 "'Steering Committee'). You can also create <strong>smart groups</strong> "
 "based on contact characteristics (e.g. this group consists of all people in "
 "our database who live in a specific locality)."
-msgstr ""
+msgstr "Koristite Grupe da biste organizovali kontakte (npr. ovi kontakti su članovi našeg 'Upravnog odbora'). Takođe možete kreirati i <strong>pametne grupe</strong> na osnovu karakteristika kontakata (npr. ovoj grupi pripadaju svi ljudi iz naše baze podataka, a koji žive na određenoj lokaciji)."
 
 #: templates/CRM/Group/Page/Group.hlp
 msgid ""
@@ -18620,13 +18620,13 @@ msgid ""
 "themselves up for certain groups by setting the group visibility to 'Public "
 "Pages' (use the <strong>Settings</strong> link), and including the "
 "<strong>Groups</strong> element in your CiviCRM Profile."
-msgstr ""
+msgstr "Možete dodati kontakte u grupu iz bilo kog seta rezultata pretrage (ili kada pregledate pojedinačni kontakt). Takođe možete dozvoliti kontaktima da se sami prijave u određene grupe tako što ćete vidljivost grupe podesiti na 'Javne strane' (upotrebite link za  <strong>Podešavanja</strong>) i uključite element <strong>Grupe</strong> u vaš CiviCRM Profil."
 
 #: templates/CRM/Group/Page/Group.hlp
 msgid ""
 "Groups which are used as mailing lists should be assigned the 'Mailing List'"
 " type."
-msgstr ""
+msgstr "Tip grupa koje se koriste kao mailing liste treba da bude 'Mailing lista'. "
 
 #: templates/CRM/Group/Page/Group.hlp
 msgid ""
