--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-18 11:35+0000\n"
+"PO-Revision-Date: 2017-02-20 15:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -288,7 +288,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Introduction Text"
-msgstr ""
+msgstr "Uvodni tekst stranice za doniranje "
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Credit Card Only?"
@@ -2711,7 +2711,7 @@ msgstr "Informacije o donaciji"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This membership will be renewed automatically every %1 %2(s)."
-msgstr ""
+msgstr "Ovo članstvo se automatski obnavlja svakog/e %1 %2(s)."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This membership will be renewed automatically every %1."
@@ -2733,7 +2733,7 @@ msgstr ""
 msgid ""
 "This recurring contribution will be automatically processed every %1 for a "
 "total %2 installments (including this initial contribution)."
-msgstr ""
+msgstr "Ova periodična donacija će biti obrađena automatski svakog/e %1 na ukupno %2 rata (uključujući i ovu prvu donaciju)."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -3125,7 +3125,7 @@ msgstr "Vaš sajt možda već ima profil(e) kreiran za ovu svrhu, i u tom sluča
 msgid ""
 "If you haven't already configured custom fields and a profile to collect "
 "data you need for this form, you can create them here using the steps below."
-msgstr ""
+msgstr "Ukoliko još uvek niste podesili sopstvena polja i profil koji će prikupljati podatke koji su vam potrebni za ovaj formular, možete ih kreirati ovde prateći korake ispod."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid ""
@@ -3138,7 +3138,7 @@ msgstr "Napravite novi profil tako što ćete kliknuti na 'Kreiraj' dugme odmah 
 msgid ""
 "Add any existing fields needed by dragging them into the profile form "
 "builder."
-msgstr ""
+msgstr "Dodajte postojeća pola koja su vam potrebna tako što ćete ih prevući u alatku za izradu formulara profila."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid ""
