--- a/po/sr_RS@latin/queue.po
+++ b/po/sr_RS@latin/queue.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-29 03:40+0000\n"
+"PO-Revision-Date: 2017-02-20 15:08+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Vreme dostave"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Release Time"
-msgstr ""
+msgstr "Vreme raspuštanja"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue item datas"
